--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security6">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -22,23 +22,23 @@
     </button>
     <div class="collapse navbar-collapse" id="topNavbar">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" th:href="@{/users}">Users</a></li>
+        <li class="nav-item"><a class="nav-link" th:href="@{/users}" sec:authorize="hasAuthority('Admin')">Users</a></li>
         <li class="nav-item"><a class="nav-link"
-                                th:href="@{/categories}">Categories</a></li>
-        <li class="nav-item"><a class="nav-link" th:href="@{/brands}">Brands</a></li>
+                                th:href="@{/categories}" sec:authorize="hasAnyAuthority('Admin','Editor')">Categories</a></li>
+        <li class="nav-item"><a class="nav-link" th:href="@{/brands}" sec:authorize="hasAnyAuthority('Admin','Editor')">Brands</a></li>
         <li class="nav-item"><a class="nav-link"
-                                th:href="@{/products}">Products</a></li>
+                                th:href="@{/products}" sec:authorize="hasAnyAuthority('Admin','Editor','Salesperson','Shipper')">Products</a></li>
         <li class="nav-item"><a class="nav-link"
-                                th:href="@{/customers}">Customers</a></li>
+                                th:href="@{/customers}" sec:authorize="hasAnyAuthority('Admin','Salesperson')">Customers</a></li>
         <li class="nav-item"><a class="nav-link"
-                                th:href="@{/Shipping}">Shipping</a></li>
-        <li class="nav-item"><a class="nav-link" th:href="@{/report}">Sales
+                                th:href="@{/Shipping}" sec:authorize="hasAnyAuthority('Admin','Salesperson')">Shipping</a></li>
+        <li class="nav-item"><a class="nav-link" th:href="@{/report}" sec:authorize="hasAnyAuthority('Admin','Salesperson')">Sales
           Report</a></li>
         <li class="nav-item"><a class="nav-link"
-                                th:href="@{/articles}">Articles</a></li>
-        <li class="nav-item"><a class="nav-link" th:href="@{/menus}">Menus</a></li>
+                                th:href="@{/articles}" sec:authorize="hasAnyAuthority('Admin', 'Editor')">Articles</a></li>
+        <li class="nav-item"><a class="nav-link" th:href="@{/menus}" sec:authorize="hasAnyAuthority('Admin','Editor')">Menus</a></li>
         <li class="nav-item"><a class="nav-link"
-                                th:href="@{/settings}">Settings</a>
+                                th:href="@{/settings}" sec:authorize="hasAuthority('Admin')">Settings</a>
         </li>
         <li>
           <span class="fas fa-user fa-2x icon-silver"></span>
