--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/account_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/account_form.html
@@ -23,7 +23,7 @@
 					<label class="col-sm-4 col-form-label">E-mail:</label>
 					<div class="col-sm-8">
 						<input type="email" th:field="*{email}" class="form-control"
-							required minlength="8" maxlength="128" id="email" />
+							required minlength="8" maxlength="128" id="email" readonly />
 					</div>
 				</div>
 
@@ -100,111 +100,15 @@
 
 			</div>
 		</form>
-
-		<div class="modal fade text-center" id="modalDialog">
-			<div class="modal-dialog">
-				<div class="modal-content">
-
-					<div class="modal-header">
-						<h4 class="modal-title" id="modalTitle"></h4>
-						<button type="button" class="close" data-dismiss="modal">&times;</button>
-					</div>
-
-					<div class="modal-body">
-						<span id="modalBody"></span>
-					</div>
-
-					<div class="modal-footer">
-						<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-					</div>
-
-				</div>
-			</div>
-		</div>
-
 		<footer th:replace="~{fragments :: footer}"></footer>
 
 	</div>
+	<script type="text/javascript"
+			th:src="@{/js/common_form.js}"></script>
+
 
 	<script type="text/javascript">
-		$(document)
-				.ready(
-						function() {
-
-							$("#buttonCancel").on('click', function() {
-								window.location = "[[@{/users}]]";
-							});
-
-							$('#imageInput')
-									.on(
-											'change',
-											function(event) {
-												var image = this.files[0];
-												var fileSize = this.files[0].size;
-												if (fileSize > 1048576) {
-													this
-															.setCustomValidity("You must choose an image less than 1MB!");
-													showModalDialog("Error",
-															"You must choose an image less than 1MB!");
-													this.reportValidity();
-												} else {
-													this.setCustomValidity("");
-													showImageThumbnail(this);
-												}
-
-											});
-
-						});
-
-		function showImageThumbnail(fileInput) {
-			var file = fileInput.files[0];
-			var reader = new FileReader();
-			reader.onload = function(e) {
-				$('#imageView').attr("src", e.target.result);
-			};
-
-			reader.readAsDataURL(file);
-		}
-
-		function checkEmailUnique(form) {
-
-			var url = "[[@{/users/check_email}]]";
-			var userEmail = $("#email").val();
-			var csrfValue = $("input[name='_csrf']").val();
-			var userId = $("#id").val();
-			params = {
-				id : userId,
-				email : userEmail,
-				_csrf : csrfValue
-			};
-
-			$.post(
-					url,
-					params,
-					function(response) {
-						if (response == "OK") {
-							form.submit();
-						} else if (response == "Duplicated") {
-							showModalDialog("Warning!",
-									"There is another User having the Email"
-											+ userEmail);
-						} else {
-							showModalDialog("Error",
-									"Unknown response from Server");
-						}
-
-					}).fail(function() {
-				showModalDialog("Error", "Could not Connect to Server.");
-			});
-
-			return false;
-		}
-
-		function showModalDialog(title, message) {
-			$('#modalTitle').text(title);
-			$('#modalBody').text(message);
-			$('#modalDialog').modal();
-		}
+		moduleURL = "[[@{/}]]";
 	</script>
 
 </body>
