--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/user_form.html
@@ -119,47 +119,10 @@
 		<footer th:replace="~{fragments :: footer}"></footer>
 
 	</div>
-
+	<script type="text/javascript"
+			th:src="@{/js/common_form.js}"></script>
 	<script type="text/javascript">
-		$(document)
-				.ready(
-						function() {
-
-							$("#buttonCancel").on('click', function() {
-								window.location = "[[@{/users}]]";
-							});
-
-							$('#imageInput')
-									.on(
-											'change',
-											function(event) {
-												var image = this.files[0];
-												var fileSize = this.files[0].size;
-												if (fileSize > 1048576) {
-													this
-															.setCustomValidity("You must choose an image less than 1MB!");
-													showModalDialog("Error",
-															"You must choose an image less than 1MB!");
-													this.reportValidity();
-												} else {
-													this.setCustomValidity("");
-													showImageThumbnail(this);
-												}
-
-											});
-
-						});
-
-		function showImageThumbnail(fileInput) {
-			var file = fileInput.files[0];
-			var reader = new FileReader();
-			reader.onload = function(e) {
-				$('#imageView').attr("src", e.target.result);
-			};
-
-			reader.readAsDataURL(file);
-		}
-
+		moduleURL = "[[@{/users}]]";
 		function checkEmailUnique(form) {
 
 			var url = "[[@{/users/check_email}]]";
