--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/categories.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/category/categories.html
@@ -1,10 +1,211 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments :: head('Shopme - Category')}"></head>
 <body>
+<div class="container-fluid">
 
+    <div th:replace="~{navigation :: topNavBar}"></div>
+
+    <div>
+        <h1>Manage Categories</h1>
+        <a th:href="@{/categories/new}">
+            <i class="fas fa-user-plus fa-3x icon-dark cursor-hand"></i>
+        </a>
+        &nbsp;&nbsp;
+        <a th:href="@{/categories/export/csv}">
+            <i class="fas fa-file-csv fa-3x icon-dark cursor-hand"></i>
+        </a>
+        &nbsp;&nbsp;
+        <a th:href="@{/categories/export/pdf}">
+            <i class="fas fa-file-pdf fa-3x icon-dark cursor-hand"></i>
+        </a>
+        &nbsp;&nbsp;
+        <a th:href="@{/categories/export/excel}">
+            <i class="fas fa-file-excel fa-3x icon-dark cursor-hand"></i>
+        </a>
+    </div>
+
+    <div class="m-1">
+        <form class="form-inline" th:action="@{/categories/page/1}">
+            <input type="hidden" name="sortField" th:value="${sortField}">
+            <input type="hidden" name="sortDir" th:value="${sortDir}">
+            <input class="form-control mr-sm-2" type="search" placeholder="Filter" aria-label="Search" name="keyword"
+                   id="keyword" required th:value="${keyword}">
+            <button class="btn btn-outline-primary my-2 my-sm-0 fas fa-search fa-3x" type="submit"></button>&nbsp;&nbsp;
+            <button class="btn btn-outline-secondary my-2 my-sm-0 fas fa-eraser fa-3x" type="button"
+                    onclick="clearFilter()"></button>
+        </form>
+    </div>
+
+    <div class="full-details">
+        <table
+                class="table table-bordered table-striped table-hover table-responsive-xl">
+            <thead class="thead-dark">
+            <tr>
+                <th class="hideable-column">
+                <th th:replace="~{fragments :: column_link('id', 'ID', 'tag')}"></th>
+                </th>
+                <th>Photos</th>
+                <th class="hideable-column">
+                <th th:replace="~{fragments :: column_link('email', 'E-mail', 'tag')}"></th>
+                </th>
+                <th th:replace="~{fragments :: column_link('firstName', 'First Name', 'none')}"></th>
+                <th th:replace="~{fragments :: column_link('lastName', 'Last Name', 'none')}"></th>
+                <th>Roles</th>
+                <th th:replace="~{fragments :: column_link('enabled', 'Enabled', 'none')}"></th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="user : ${listUsers}">
+                <td class="hideable-column">[[${user.id}]]</td>
+                <td><i th:if="${user.id == null}"
+                       class="fas fa-portrait fa-3x icon-dark"></i> <img
+                        th:src="@{${user.photosImagePath}}" class="img-fluid"
+                        style="max-width: 100px; max-height: 100px;"/></td>
+                <td class="hideable-column">[[${user.email}]]</td>
+                <td>[[${user.firstName}]]</td>
+                <td>[[${user.lastName}]]</td>
+                <td>[[${user.roles}]]</td>
+                <td><a th:if="${user.enabled == true}" class="cursor-hand"
+                       th:href="@{'/users/setUserStatus/'+${user.id}+'/false'}"> <i
+                        class="fas fa-check-circle fa-2x icon-green"></i></a> <a
+                        th:if="${user.enabled == false}"
+                        th:href="@{'/users/setUserStatus/'+${user.id}+'/true'}"
+                        class="cursor-hand"> <i class="fas fa-circle fa-2x icon-dark"></i>
+                </a></td>
+
+
+                <td style="width: 150px;"><a title="Edit this User"
+                                             class="cursor-hand" th:href="@{'/users/edit/'+${user.id} }">
+                    <i class="fas fa-edit fa-2x icon-green"></i>
+                </a> &nbsp; <a th:href="@{'/users/delete/'+${user.id}}"
+                               class="cursor-hand link-delete"> <i
+                        class="fas fa-trash fa-2x icon-dark"> </i></a></td>
+
+
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="less-details">
+        <div th:each="user: ${listUsers}" class="row m-1">
+            <div class="col">
+                <i th:if="${user.id == null}"
+                   class="fas fa-portrait fa-3x icon-dark"></i>
+                <img th:src="@{${user.photosImagePath}}" class="img-fluid"
+                     style="max-width: 100px; max-height: 100px;"/>
+            </div>
+            <div class="col">
+                <div>[[${user.fullName}]]</div>
+                <div>[[${user.roles}]]</div>
+            </div>
+            <div class="mt-2">
+
+                <a title="Edit this User" class="cursor-hand" th:href="@{'/users/edit/'+${user.id} }"> <i
+                        class="fas fa-edit fa-2x icon-green"></i></a> &nbsp;
+                <a th:href="@{'/users/delete/'+${user.id}}" class="cursor-hand link-delete"> <i
+                        class="fas fa-trash fa-2x icon-dark"> </i></a>
+
+            </div>
+            <div>&nbsp;</div>
+        </div>
+    </div>
+
+    <div class="text-center m-1" th:if="${totalItems > 0}">
+			<span>Showing Users # [[${startCount}]] to [[${endCount}]] of
+				[[${totalItems}]]</span>
+    </div>
+
+    <div class="text-center m-1" th:if="${totalItems == 0}">
+        <span>No users found</span>
+    </div>
+
+    <div th:if="${totalPages > 0}">
+        <nav>
+            <ul class="pagination justify-content-center">
+                <li
+                        th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+                    <a th:replace="~{fragments :: hyperlink(1, 'First')}"></a>
+                </li>
+                <li
+                        th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+                    <a th:replace="~{fragments :: hyperlink(${(currentPage - 1 <= 0) ? 1 : (currentPage -1)}, 'Previous')}"></a>
+                </li>
+
+                <li
+                        th:class="${currentPage != i ? 'page-item' : 'page-item active'}"
+                        th:each="i : ${#numbers.sequence(1, totalPages)}">
+                    <a th:replace="~{fragments :: hyperlink(${i}, ${i.toString()})}"></a>
+
+                </li>
+
+                <li
+                        th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+                    <a th:replace="~{fragments :: hyperlink(${(currentPage+1)}, 'Next')}"></a>
+                </li>
+
+
+                <li
+                        th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+                    <a th:replace="~{fragments :: hyperlink(${(totalPages)}, 'Last')}"></a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
+
+    <div class="modal fade text-center" id="modalDialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h4 class="modal-title" id="modalTitle">Confirmation Message</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <div class="modal-body">
+                    <span id="modalBody"></span>
+                </div>
+
+                <div class="modal-footer">
+                    <a class="btn btn-success confirm-dialog" style="color: white;">Yes</a>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <footer th:replace="~{fragments :: footer}"></footer>
+</div>
+<script type="text/javascript">
+    $(document)
+        .ready(
+            function () {
+                $('.link-delete')
+                    .on(
+                        'click',
+                        function (event) {
+                            event.preventDefault();
+                            link = $(this).attr('href');
+                            console.log(link);
+                            showModalDialog("Are you Sure you want to Delete the User with the id ?");
+                            $('.confirm-dialog').attr(
+                                'href', link);
+
+                        });
+            });
+
+    function showModalDialog(message) {
+        $('#modalBody').text(message);
+        $('#modalDialog').modal();
+    }
+
+    function clearFilter() {
+        window.location = "[[@{/users}]]"
+    }
+</script>
 </body>
 </html>
