--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/error/500.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/error/500.html
@@ -2,11 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 >
-<head th:replace="~{fragments :: head('Shopme - Error')}"></head>
+<head th:replace="~{fragments/fragments :: head('Shopme - Error')}"></head>
 <body>
 <div class="container-fluid">
 
-  <div th:replace="~{navigation :: topNavBar}"></div>
+  <div th:replace="~{fragments/navigation :: topNavBar}"></div>
 
   <div class="text-center">
     <h2 class="m-3">Sorry, The Server has Encountered an Error while processing your request.</h2>
@@ -17,7 +17,7 @@
     <h1>Developed by Nurudeen Abubakr</h1>
   </div>
 
-  <footer th:replace="~{fragments :: footer}"></footer>
+  <footer th:replace="~{fragments/fragments :: footer}"></footer>
 </div>
 </body>
 </html>
